--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ li a{
 .digonal-container{
   width: 400px; 
   height: 400px;
-  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
   overflow: hidden; 
   background-color: #ff7f50; 
   display: flex;
@@ -85,4 +85,5 @@ li a{
   height: 100%;
   object-fit: cover;
 }
+
 
